# memcached-ebpf-proxy-cache

./: .dir-locals.el  Cargo.toml  LICENSE  README.md
memcached-bench/: Cargo.toml
memcached-bench/src/: main.rs
memcached-ebpf-proxy-cache/: Cargo.toml
memcached-ebpf-proxy-cache-common/: Cargo.toml
memcached-ebpf-proxy-cache-common/src/: lib.rs
memcached-ebpf-proxy-cache-ebpf/: Cargo.toml
memcached-ebpf-proxy-cache-ebpf/src/: main.rs
memcached-ebpf-proxy-cache/src/: main.rs
memcached-ebpf-proxy-cache/tests/: integration_test.rs
xtask/: Cargo.toml
xtask/src/: build_ebpf.rs  run.rs
xtask/tests/: integration_test.rs
